--- a/p9_carWebsite/index.html
+++ b/p9_carWebsite/index.html
@@ -26,7 +26,7 @@
             </div>   
         </div>
 
-        <!-- GUIDE SECTION -->
+        <!-- GUIDE SECTION s-->
         <div class="ender">
         </div>
 
